# AKSAY-GRILL-Claud

./: .gitattributes  .gitignore  .replit  CHANGELOG.md  CHANGELOG_FOR_CLIENT.txt  CHANGES.txt  CLAUDE.md  CODE_REVIEW_REPORT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  FINAL_STATUS.md  GIT_READY.md  GUIDE.md  GUIDE.txt  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  app.py  db.py  forms.py  login_archive.py  mailer.py  models.py  orders.html  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  routes_admin.py  routes_public.py  tailwind.config.js  test-fonts.html
.agents/: agent_assets_metadata.toml
.claude/skills/: verify-repo-integrity.md
assets/css/: fonts.css  main.css
attached_assets/: Pasted--1-1--1776997531309_1776997531310.txt  Pasted--3-2-A--1777337298987_1777337298987.txt  Pasted--Python-Flask-SQLite--1777295928505_1777295928505.txt  aksay-grill_1776971500369.html
deploy/: aksaygril.service  install.sh  nginx.conf  requirements.txt
templates/: about.html  base_public.html  business-lunch.html  catering.html  cookies.html  events.html  index.html  offer.html  privacy.html  spasibo.html
templates/admin/: admins.html  archive.html  archive_setup.html  base.html  business_lunches.html  catering.html  dashboard.html  delivery_orders.html  email_settings.html  events.html  journal.html  legal.html  login.html  menu.html  menu_dish_form.html  menu_stats.html  profile.html  quick_requests.html  requisites.html  seo.html  (+3 more)
utils/: admin_helpers.py  admin_views.py  constants.py  csv_export.py  db_helpers.py  form_helpers.py
