[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-compress>=1.24",
    "flask-limiter>=4.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.1",
]
